Order price BigDecimal, tick rounding